setup for problem 04

--- a/kickstart/2022_round_a/CMakeLists.txt
+++ b/kickstart/2022_round_a/CMakeLists.txt
@@ -11,3 +11,4 @@ add_executable(problem_03 problem_03.cpp)
 add_executable(problem_03_supp problem_03_supp.cpp)
 
 add_executable(problem_04 problem_04.cpp)
+add_executable(problem_04_supp problem_04_supp.cpp)
